[package]
name = "axum-tungstenite"
version = "0.3.0"
categories = ["asynchronous", "network-programming", "web-programming"]
description = "WebSocket connections for axum directly using tungstenite"
edition = "2021"
homepage = "https://github.com/davidpdrsn/axum-tungstenite"
keywords = ["http", "web", "framework"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/davidpdrsn/axum-tungstenite"

[dependencies]
async-trait = "0.1.83"
axum-core = "0.4.4"
base64 = "0.22.1"
bytes = "1.7.2"
futures-util = { version = "0.3.30", default-features = false, features = ["alloc"] }
http = "1.1.0"
http-body = "1.0.1"
hyper = "1.4.1"
hyper-util = { version = "0.1.9", features = ["tokio"] }
sha-1 = "0.10.1"
tokio = { version = "1.40.0", features = ["rt"] }
tokio-tungstenite = "0.24.0"

[dev-dependencies]
axum = "0.7.6"
